--- a/esmvaltool/recipes/recipe_miles.yml
+++ b/esmvaltool/recipes/recipe_miles.yml
@@ -21,7 +21,7 @@
 ## This namelist is part of the ESMValTool
 ################################################################################
 #
-#    mask_landocean: false
+# mask_landocean: false
 # multi_model_statistics: false
 # reference_dataset: "EC-Earth"
 ---
@@ -56,10 +56,13 @@ diagnostics:
         field: T2Ds
         reference_dataset: "ERA-Interim"
     scripts:
-      miles_block: 
-        script: miles/miles_block.r
-        seasons: DJF # Select season ('DJF','MAM','JJA','SON')
-        teles: NAO   # Select EOFs ('NAO','AO') 
+        miles_block: 
+            script: miles/miles_block.r
+            seasons: DJF # Select season ('DJF','MAM','JJA','SON')
+        miles_eof: 
+            script: miles/miles_eof.r
+            seasons: DJF # Select season ('DJF','MAM','JJA','SON')
+            teles: NAO   # Select EOFs ('NAO','AO') 
         
         
 
