--- a/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
@@ -19,8 +19,8 @@
 
 datasets:
 #  - {model: CDS-XCO2, project: OBS,    tier: L3,    type: sat,       start_year: 2003,  end_year: 2016}
-  - {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: decadal1980,  ensemble: r1i1p1,  start_year: 1999,  end_year: 2000}
-#  - {dataset: XCH4, obssystem: sat, project: CDS-OBS,  level: L3, start_year: 2003,  end_year: 2016}
+#  - {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: decadal1980,  ensemble: r1i1p1,  start_year: 1999,  end_year: 2000}
+  - {dataset: XCH4, obssystem: sat-edt, project: CDS-OBS,  level: L3, start_year: 2003,  end_year: 2016}
 #[project]_[dataset]_[type]_[version]_[field]_[short_name]
 #OBS_sat_CDS-XCH4_L3_T2Ms_xch4_2003-2016
 preprocessors:
@@ -30,16 +30,18 @@ diagnostics:
   SPQB:
     description: Single product quality brief.
     variables:
-      ta:
+#      ta:
+      xch4:
         preprocessor: noop
-        field: T3Ms
-#        derive: True
-        mip: Amip
+        field: T2Ms
+#        field: T3Ms
+        derive: False
+#        mip: Amip
     scripts:
       SPQB_basic_report:
         script: qualassess/DUMMY_C3S_511_SPQB.py
-        data_colors: RdYlGn
-        levels: [30000.]
+        levels: None
+#        levels: [30000.,10000.]
         show_latex: False #options are: True/False/no_latex
         
 #  diagnostic1:
