fix xch4 CMOR table (not working yet, due to iris constraints)

--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -170,7 +170,7 @@ EMAC:
   
 CDS-OBS:
   input_dir:
-    default: '/'
+    default: ''
   input_file: '[project]_[obssystem]_[dataset]_[level]_[field]_[short_name]*'
   output_file: '[project]_[obssystem]_[dataset]_[level]_[field]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
