--- a/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB.yml
@@ -35,8 +35,8 @@ diagnostics:
         preprocessor: noop
         field: T2Ms
 #        field: T3Ms
-        derive: True
-        mip: Amip
+        derive: False
+        mip: Amon
     scripts:
       SPQB_basic_report:
         script: qualassess/DUMMY_C3S_511_SPQB.py
