Add mandatory description and authors sections

--- a/esmvaltool/recipes/examples/recipe_preprocessor_derive_test.yml
+++ b/esmvaltool/recipes/examples/recipe_preprocessor_derive_test.yml
@@ -1,7 +1,13 @@
-# Note: the different diagnostics are necessary because some of the derived
-# variables use the same basic variables, which leads to PermissionDenied
-# errors.
 ---
+documentation:
+  description: |
+    Recipe that demonstrates various uses of the preprocessor derive functionality.
+  authors:
+    - ande_bo
+    - schl_ma
+  projects:
+    - c3s-magic
+
 preprocessors:
 
   regrid:
