--- a/esmvaltool/recipes/examples/recipe_r.yml
+++ b/esmvaltool/recipes/examples/recipe_r.yml
@@ -1,20 +1,16 @@
 # recipe_example_r.yml
 ---
- documentation:
-  description: 
-   - Recipe for example diagnostic written in R
-#    authors: 
-#     - arno_en
-#    references: 
-#     - donofrio14jh
-#    projects: 
-#     - c3s-magic
- datasets:
+documentation:
+  description: Recipe for example diagnostic written in R.
+  authors: 
+    - arno_en
+
+datasets:
   - {dataset: EC-EARTH, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1997, end_year: 1997}
- preprocessors:
+preprocessors:
   preproc:
     extract_levels: false
- diagnostics:
+diagnostics:
   example:
     description: Example diagnostic written in R 
     variables:
