--- a/esmvaltool/recipes/recipe_autoassess_landsurface_soilmoisture.yml
+++ b/esmvaltool/recipes/recipe_autoassess_landsurface_soilmoisture.yml
@@ -1,9 +1,3 @@
-#### summary 
-#### recipe that runs the Autoassess Land-surface assessment area diagnostic
-#### Version: 11 Spetember 2018 
-#### Author: V. Predoi UREAD (valeriu.predoi@ncas.ac.uk)
-#################
-#### Description:
 #################
 #it runs:
 #  - soilmoisture
@@ -22,6 +16,10 @@
 # RECIPE IS NOT FULLY WORKING !!!
 ###########################################################################################################
 ---
+documentation:
+  description: Recipe that runs the Autoassess Land-surface assessment area diagnostic.
+  authors:
+    - pred_va
 
 datasets:
   - {dataset: IPSL-CM5A-LR,  project: CMIP5, exp: historical,  ensemble: r1i1p1,  start_year: 1992,  end_year: 2002}
