--- a/esmvaltool/recipes/recipe_autoassess_stratosphere.yml
+++ b/esmvaltool/recipes/recipe_autoassess_stratosphere.yml
@@ -1,9 +1,3 @@
-#### summary 
-#### recipe that runs the Autoassess Stratorsphere assessment area diagnostic
-#### Version: 1 June 2018; updated version: 11 September 2018
-#### Author: V. PREDOI (UREAD, valeriu.predoi@ncas.ac.uk) 
-#################
-#### Description:
 #################
 #The original stratospehre diagnostic from autoassess accepts two input UM suites; this has now been
 #changed for ESMValTool to two datasets; the recipe can accomodate as many pairs of datasets to be compared as the 
@@ -21,6 +15,10 @@
 # RECIPE IS FULLY WORKING BUT ADD MERRA FOR OBS !!!
 ###########################################################################################################
 ---
+documentation:
+  description: Recipe that runs the Autoassess Stratosphere assessment area diagnostic.   
+  authors:
+    - pred_va
 
 datasets:
   - {dataset: MPI-ESM-LR,  project: CMIP5,  mip: Amon,  exp: amip,  ensemble: r1i1p1,  start_year: 1992,  end_year: 2002}
