--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -76,6 +76,10 @@ authors:
     name: Davin, Edouard Leopold
     institute: ETH, CH
     email: edouard.davin 'at' env.ethz.ch
+  davi_pa:
+    name: Davini, Paolo
+    institute: CNR-ISAC, Italy
+    email: p.davini 'at' isac.cnr.it
   ehbr_ca:
     name: Ehbrecht, Carsten
     institute: DKRZ, Germany
@@ -417,6 +421,8 @@ references:
   bianchi12gbc: "Bianchi, D. et al., Global Biogeochem. Cy., 26, GB2009, doi:10.1029/2011GB004209, 2012."
   cionni11acp: "Cionni et al., Atmos. Chem. Phys., 11, 11267-11292, doi:10.5194/acp-11-11267-2011, 2011."
   clivar09jclim: "CLIVAR Madden-Julian Oscillation Working Group, J. Climate, 22, 3006–3030, doi:10.1175/2008JCLI2731.1, 2009."
+  davini12jclim: "Davini P., C. Cagnazzo, S. Gualdi, and A. Navarra. J. Climate, 25, 6496–6509, doi: 10.1175/JCLI-D-12-00032.1, 2012"
+  davini18: "Davini, P. MiLES - Mid Latitude Evaluation System. Zenodo. doi:10.5281/zenodo.1237837, 2018"
   demora2018: "de Mora et al., Geosci. Model Dev., 11, 4215-4240, https://doi.org/10.5194/gmd-11-4215-2018, 2018."
   dong08grl: "Dong, S. et al., J. Geophys. Res., 113, C06013, doi:10.1029/2006JC004051, 2008."
   donofrio14jh: "D'Onofrio et al., J of Hydrometeorology 15, 830-843, 2014."
@@ -451,6 +457,7 @@ references:
   roehrig13jclim: "Roehrig, R. et al., J. Climate, 26, 6471-6505, doi:10.1175/JCLI-D-12-00505.1, 2013."
   sperber12asl: "Sperber and Kim, Atmos. Sci. Lett., 13, 3, 187-193, doi:10.1002/asl.378, 2012."
   stroeve07grl: "Stroeve, J. et al., Geophys. Res. Lett., 34, L09501, doi:10.1029/2007GL029703, 2007."
+  tibaldi90tel: "Tibaldi S. and Molteni F. Tellus A 42(3): 343–365, doi:10.1034/j.1600-0870.1990.t01-2-00003.x, 1990."
   taylor12: "Taylor et al., Nature, 489, 423-426, doi:10.1038/nature11377, 2012."
   takahashi14marchem: "Takahashi et al., Mar. Chem., 164, 95-125, doi:10.1016/j.marchem.2014.06.004, 2014."
   wang99bams: "Wang, B. and Z. Fan, Bull. Amer. Meteor. Soc., 80, 629-638, doi:10.1175/1520-0477(1999)080&lt;0629:COSASM&gt;2.0.CO;2, 1999."
@@ -517,6 +524,7 @@ projects:
   esmval: DLR project ESMVal
   qa4ecv: QA4ECV
   ukesm: UKESM, UK Earth System Model project (NERC)
+  c3s-magic: C3S project MAGIC (34a Lot 2)
 
 realms:
   aerosol: aerosol
