--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -56,6 +56,10 @@ authors:
     name: Andrews, Oliver
     institute: Tyndall Centre, UK
     email: oliverdandrews 'at' googlemail.com
+  arno_en:
+    name: Arnone, Enrico
+    institute: ISAC-CNR, Torino, Italy
+    email: e.arnone 'at' isac.cnr.it
   bock_ls:
     name: Bock, Lisa
     institute: DLR, Germany
@@ -72,6 +76,10 @@ authors:
     name: Davin, Edouard Leopold
     institute: ETH, CH
     email: edouard.davin 'at' env.ethz.ch
+  davi_pa:
+    name: Davini, Paolo
+    institute: CNR-ISAC, Italy
+    email: p.davini 'at' isac.cnr.it
   ehbr_ca:
     name: Ehbrecht, Carsten
     institute: DKRZ, Germany
@@ -102,6 +110,10 @@ authors:
   hann_ul:
     name: Hansson, Ulf
     institute: SMHI, Sweden
+  hard_jo:
+    name: von Hardenberg, Jost
+    institute: ISAC-CNR, Torino, Italy
+    email: j.vonhardenberg 'at' isac.cnr.it
   hemp_ni:
     name: Hempelmann, Nils
     institute: IPSL, France
@@ -256,6 +268,10 @@ authors:
     name: Charlton-Perez, Andrew
     institute: Univ. of Reading, UK
     email: a.j.charlton-perez 'at' reading.ac.uk
+  cort_su:
+    name: Corti, Susanna
+    institute: ISAC-CNR, Torino, Italy
+    email: s.corti 'at' isac.cnr.it
   denn_jo:
     name: Dennis, John
     institute: NCAR, USA
@@ -435,6 +451,7 @@ references:
   roedenbeck13os: "Roedenbeck, C. et al., Ocean Sci., 9, 193-216, doi:10.5194/os-9-193-2013, 2013."
   roehrig13jclim: "Roehrig, R. et al., J. Climate, 26, 6471-6505, doi:10.1175/JCLI-D-12-00505.1, 2013."
   sperber12asl: "Sperber and Kim, Atmos. Sci. Lett., 13, 3, 187-193, doi:10.1002/asl.378, 2012."
+  straus07jcli: "Straus, D.M., S. Corti, and F. Molteni. J. Climate, 20, 2251–2272, doi:10.1175/JCLI4070.1, 2007 " 
   stroeve07grl: "Stroeve, J. et al., Geophys. Res. Lett., 34, L09501, doi:10.1029/2007GL029703, 2007."
   taylor12: "Taylor et al., Nature, 489, 423-426, doi:10.1038/nature11377, 2012."
   takahashi14marchem: "Takahashi et al., Mar. Chem., 164, 95-125, doi:10.1016/j.marchem.2014.06.004, 2014."
