--- a/esmvaltool/recipes/recipe_Thermodyn_diagtool.yml
+++ b/esmvaltool/recipes/recipe_Thermodyn_diagtool.yml
@@ -21,27 +21,60 @@ documentation:
         - trr181
 
 datasets:
-    #- {dataset: ACCESS1-0, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:0436, end_year:0440}
-    - {dataset: ACCESS1-0, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
-    #- {dataset: ACCESS1-3, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:1850, end_year:1855}
-    - {dataset: ACCESS1-3, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
-    #- {dataset: BNU-ESM, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:2001, end_year:2006}
+    #- {dataset: ACCESS1-0, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 436, end_year: 455}
+    #- {dataset: ACCESS1-0, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1984, end_year: 2003}
+    #- {dataset: ACCESS1-0, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: ACCESS1-0, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2100}
+    # - {dataset: ACCESS1-3, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 386, end_year: 405}
+    - {dataset: ACCESS1-3, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: ACCESS1-3, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: ACCESS1-3, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2100}
+    #- {dataset: ACCESS1-3, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2073}
+    #- {dataset: BNU-ESM, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1979, end_year: 2007}
+    - {dataset: BNU-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: BNU-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
-    #- {dataset: CanESM2, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:2441, end_year:2446}
+    #- {dataset: BNU-ESM, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2099}
+    #- {dataset: BNU-ESM, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
+    #- {dataset: CanESM2, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2441, end_year: 2480}
+    - {dataset: CanESM2, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1995, end_year: 2000}
     #- {dataset: CanESM2, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1971, end_year: 2000}
-    #- {dataset: HadGEM2-ES, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:2003, end_year:2008}
-    - {dataset: IPSL-CM5A-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
-    - {dataset: IPSL-CM5A-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
-    #- {dataset: IPSL-CM5A-MR, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:2001, end_year:2006}
-    - {dataset: MIROC5, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
-    #- {dataset: MIROC5, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:2004, end_year:2009}
-    - {dataset: MIROC-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
-    #- {dataset: MIROC-ESM, project: CMIP5, mip:MIP, exp:piControl, ensemble: r1i1p1, start_year:2006, end_year:2011}
-    - {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: historical, ensemble: r1i1p1, start_year: 1975, end_year: 1999}
-    #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: piControl, ensemble: r1i1p1, start_year: 2000, end_year: 2005}
-    #- {dataset: MPI-ESM-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1995}
+    #- {dataset: CanESM2, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2099}
+    #- {dataset: CanESM2, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
+    #- {dataset: HadGEM2-ES, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1985, end_year: 2008}
+    #- {dataset: HadGEM2-ES, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2098}
+    #- {dataset: HadGEM2-ES, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
+    - {dataset: IPSL-CM5A-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: IPSL-CM5A-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: IPSL-CM5A-LR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
+    - {dataset: IPSL-CM5A-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: IPSL-CM5A-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: IPSL-CM5A-MR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2030, end_year: 2059}
+    #- {dataset: IPSL-CM5A-MR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
+    - {dataset: MIROC5, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: MIROC5, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: MIROC5, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2300, end_year: 2329}
+    #- {dataset: MIROC5, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
+    #- {dataset: MIROC5, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2073}
+    #- {dataset: MIROC-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: MIROC-ESM, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2311, end_year: 2313}
+    - {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: historical, ensemble: r1i1p1, start_year: 1975, end_year: 1999}
+    #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: piControl, ensemble: r1i1p1, start_year: 1986, end_year: 2005}
+    #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
+    #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2073}
+    - {dataset: MPI-ESM-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: MPI-ESM-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: MPI-ESM-LR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2016, end_year: 2035}
+    #- {dataset: MPI-ESM-LR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2016, end_year: 2018}
+    #- {dataset: MPI-ESM-LR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
+    #- {dataset: MPI-ESM-LR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2073}
+    - {dataset: MPI-ESM-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: MPI-ESM-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: MPI-ESM-MR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1986, end_year: 2005}
+    #- {dataset: MPI-ESM-MR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
+    #- {dataset: MPI-ESM-MR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2073}
     #- {dataset: MPI-ESM-P, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
+    #- {dataset: MPI-ESM-P, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2986, end_year: 3005}
 preprocessors:
   prep0: {}
 
@@ -51,95 +84,108 @@ diagnostics:
     themes: phys
     realms: atmos
     variables:
-      hfls:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      hfss:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      pr:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      ps:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      prsn:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      rlds:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      rlus:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      rlut:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      rsds:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      rsus:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      rsdt:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      rsut:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      ts:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      uas:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      vas:
-        preprocessor: prep0
-        mip: Amon
-        field: T2Ms
-      hus:
-        preprocessor: prep0
-        mip: Amon
-        field: T3M
-      tas:
-        preprocessor: prep0
-        mip: day
-        field: T2Ds
-      ta:
-        preprocessor: prep0
-        mip: day
-        field: T3D
-      ua:
-        preprocessor: prep0
-        mip: day
-        field: T3D
-      va:
-        preprocessor: prep0
-        mip: day
-        field: T3D
-      wap:
-        preprocessor: prep0
-        mip: day
-        field: T3D
+       hfls:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       hfss:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       pr:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       ps:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       prsn:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       rlds:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       rlus:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       rlut:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       rsds:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       rsus:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       rsdt:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       rsut:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       #sftlf:
+     # #  preprocessor: prep0
+     # #  mip: fx
+     # #  field: F2Ms
+       ts:
+         preprocessor: prep0
+         mip: Amon
+         field: T2Ms
+       #uas:
+      #   preprocessor: prep0
+      #   mip: Amon
+      #   field: T2Ms
+      # vas:
+      #   preprocessor: prep0
+      #   mip: Amon
+      #   field: T2Ms
+       hus:
+         preprocessor: prep0
+         mip: Amon
+         field: T3M
+       tas:
+         preprocessor: prep0
+         mip: day
+         field: T2Ds
+       uas:
+         preprocessor: prep0
+         mip: day
+         field: T2Ds
+       vas:
+         preprocessor: prep0
+         mip: day
+         field: T2Ds
+       ta:
+         preprocessor: prep0
+         fx_files: [sftlf]
+         mip: day
+         field: T3D
+       ua:
+         preprocessor: prep0
+         mip: day
+         field: T3D
+       va:
+         preprocessor: prep0
+         mip: day
+         field: T3D
+       wap:
+         preprocessor: prep0
+         mip: day
+         field: T3D
     scripts:
       Thermodyn_Diag:
         script: Thermodyn_diagtool/thermodyn_diagnostics.py
         eb: y
-        lsm: n
+        lsm: y
         wat: y
         lec: y
         entr: y
