Remove broken conda package

--- a/environment.yml
+++ b/environment.yml
@@ -15,9 +15,9 @@ dependencies:
   - ncurses=6.1=hfc679d8_1
   - r-base
   - r-rcpp
+  - r-lintr
   - libgfortran-ng # needed by r packages
   # TODO: add julia
-  - nco
 
   - pip:
       # TODO: include dummydata in esmvaltool repository and move to setup.py
