changed name of main and updated call

--- a/esmvaltool/recipes/recipe_ensclus.yml
+++ b/esmvaltool/recipes/recipe_ensclus.yml
@@ -44,7 +44,7 @@ diagnostics:
         field: T2Ms
     scripts:
       main:
-        script: ensclus/main.py
+        script: ensclus/ensclus.py
         title: "Ensemble clustering diagnostic"
 
         ## Information required:
