--- a/esmvaltool/recipes/recipe_Thermodyn_diagtool.yml
+++ b/esmvaltool/recipes/recipe_Thermodyn_diagtool.yml
@@ -25,18 +25,18 @@ datasets:
     #- {dataset: ACCESS1-0, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1984, end_year: 2003}
     #- {dataset: ACCESS1-0, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: ACCESS1-0, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2100}
-    # - {dataset: ACCESS1-3, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 386, end_year: 405}
-    - {dataset: ACCESS1-3, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+     - {dataset: ACCESS1-3, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 386, end_year: 405}
+    #- {dataset: ACCESS1-3, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: ACCESS1-3, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: ACCESS1-3, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2100}
     #- {dataset: ACCESS1-3, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2073}
-    #- {dataset: BNU-ESM, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1979, end_year: 2007}
-    - {dataset: BNU-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    - {dataset: BNU-ESM, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1979, end_year: 2007}
+    #- {dataset: BNU-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: BNU-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: BNU-ESM, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2099}
     #- {dataset: BNU-ESM, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
-    #- {dataset: CanESM2, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2441, end_year: 2480}
-    - {dataset: CanESM2, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1995, end_year: 2000}
+    #- {dataset: CanESM2, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2441, end_year: 2446}
+    #- {dataset: CanESM2, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1995, end_year: 2000}
     #- {dataset: CanESM2, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1971, end_year: 2000}
     #- {dataset: CanESM2, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2099}
     #- {dataset: CanESM2, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
@@ -46,29 +46,29 @@ datasets:
     - {dataset: IPSL-CM5A-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: IPSL-CM5A-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: IPSL-CM5A-LR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
-    - {dataset: IPSL-CM5A-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: IPSL-CM5A-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: IPSL-CM5A-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: IPSL-CM5A-MR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2030, end_year: 2059}
     #- {dataset: IPSL-CM5A-MR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2071, end_year: 2074}
-    - {dataset: MIROC5, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: MIROC5, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: MIROC5, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: MIROC5, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2300, end_year: 2329}
     #- {dataset: MIROC5, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
     #- {dataset: MIROC5, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2073}
     #- {dataset: MIROC-ESM, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: MIROC-ESM, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2311, end_year: 2313}
-    - {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: historical, ensemble: r1i1p1, start_year: 1975, end_year: 1999}
     #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: piControl, ensemble: r1i1p1, start_year: 1986, end_year: 2005}
     #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
     #- {dataset: MIROC-ESM-CHEM, project: CMIP5,  exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2073}
-    - {dataset: MPI-ESM-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: MPI-ESM-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: MPI-ESM-LR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: MPI-ESM-LR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2016, end_year: 2035}
     #- {dataset: MPI-ESM-LR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 2016, end_year: 2018}
     #- {dataset: MPI-ESM-LR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
     #- {dataset: MPI-ESM-LR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2073}
-    - {dataset: MPI-ESM-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
+    #- {dataset: MPI-ESM-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1994, end_year: 1999}
     #- {dataset: MPI-ESM-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1970, end_year: 1999}
     #- {dataset: MPI-ESM-MR, project: CMIP5, exp: piControl, ensemble: r1i1p1, start_year: 1986, end_year: 2005}
     #- {dataset: MPI-ESM-MR, project: CMIP5, exp: rcp85, ensemble: r1i1p1, start_year: 2070, end_year: 2099}
